# mus_sort

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  MANIFEST.in  Makefile  README.md  build.sh  mus_sort.bat  mus_sort.py  mus_sort.sh  musort  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.basedpyright/: baseline.json
.git-hooks/: pre-commit
musort/: sort_folders.py
musort/tools/: __init__.py
src/mus_sort/tools/: clargs.py
src/musort/: __init__.py  __main__.py  app.py  info.py  music_file.py  mut_chain.py  recurse_directory.py  sort.py  sort_files.py  sort_folders.py  track.py  typeshed.py
src/musort/tools/: __init__.py  clargparser.py  clargs.py
src/musort/tools/os_locale/: __init__.py  linux.py  windows.py
typings/tinytag/: __init__.pyi  tinytag.pyi
